src/objects/Transaction__c.object
<CustomObject>
    <fields>
        <fullName>Company__c</fullName>
        <formula>Contact__r.Account.Name</formula>
        <label>Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Escrow__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Escrow__c</referenceTo>
        <relationshipLabel>Parties to the Transaction</relationshipLabel>
        <relationshipName>Parties_to_the_Transaction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Seller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buyer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lessee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lessor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sale_CAP__c</fullName>
        <formula>Sale__r.CAP_Rate__c</formula>
        <label>Sale CAP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Sale_Date__c</fullName>
        <formula>Sale__r.Sale_Date__c</formula>
        <label>Sale Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sale_Price_SF__c</fullName>
        <formula>Sale__r.Sale_Price_SF__c</formula>
        <label>Sale Price/SF</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sale_Price__c</fullName>
        <formula>Sale__r.Sale_Price__c</formula>
        <label>Sale Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sale__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Comp</label>
        <referenceTo>Sale__c</referenceTo>
        <relationshipLabel>Parties to the Transaction</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Transcation_Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Parties to the Transaction</relationshipLabel>
        <relationshipName>Parties_to_the_Transaction</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Party to the Transaction</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Transaction Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Parties to the Transaction</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>